@@ -62,6 +62,7 @@ if [ "$1" = "--help" ]; then
     echo
     echo "    --variable=CC"
     echo "    --variable=CXX"
+    echo "    --variable=OBJCXX"
     echo "    --variable=GNUMAKE"
     echo "    --variable=GNUSTEP_MAKEFILES"
     echo "    --variable=GNUSTEP_USER_DEFAULTS_DIR"
@@ -159,6 +160,8 @@ case "$1" in
   --variable=CC) echo "@CC@"
               exit 0;;
   --variable=CXX) echo "@CXX@"
+              exit 0;;
+  --variable=OBJCXX) echo "@OBJCXX@"
               exit 0;;
   --variable=GNUSTEP_MAKEFILES) echo "$GNUSTEP_MAKEFILES"
               exit 0;;
